Infrastructure-cloud-EKS/Argocd-helm/argocd-ingress-webhoock.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-webhook-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  #ingressClassName: nginx-external    
  ingressClassName: nginx-internal  # Para uso interno
  tls:
  - hosts:
    - argocd.andherson33.click
  rules:
  - host: argocd.andherson33.click
    http:
      paths:
      - path: /api/webhook
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
